--- a/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
@@ -95,6 +95,7 @@ packagelist "gnome-shell-extensions" "gnome-tweaks"
 package "htop"
 package "jq"
 package "meld"
+package "ncdu"
 package "parallel"
 package "pass"
 {{ if .work -}}
