Tweak `nix` configuration

--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -82,6 +82,7 @@
 /.chezmoiscripts/ip-route.sh
 /.config/kube/config
 /.config/nix
+/.config/nixpkgs
 /.local/bin/appctl
 /.local/bin/circleci
 /.local/bin/jira
