--- a/dot_venv/requirements.in.tmpl
+++ b/dot_venv/requirements.in.tmpl
@@ -4,7 +4,7 @@ ansible-lint
 cc2538-bsl @ git+https://github.com/JelmerT/cc2538-bsl
 esphome
 esptool
-{{- end }}
+{{ end -}}
 gnome-extensions-cli
 pip-tools >= 7
 pipx
