Improve SSH config

--- a/.chezmoiignore.tmpl
+++ b/.chezmoiignore.tmpl
@@ -83,6 +83,7 @@
 /.config/kube/config
 /.config/nix
 /.config/nixpkgs
+/.config/systemd/user/ssh-agent-sk.service
 /.local/bin/appctl
 /.local/bin/circleci
 /.local/bin/jira
