--- a/.chezmoiscripts/run_onchange_after_50_nix.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_50_nix.sh.tmpl
@@ -4,4 +4,8 @@ set -o errexit
 set -o nounset
 set -o pipefail
 
-{{ .chezmoi.homeDir }}/.local/bin/nix-installer install linux  --no-confirm --extra-conf 'trusted-users = {{ .chezmoi.username }}'
+export NIX_INSTALLER_EXTRA_CONF='trusted-users = {{ .chezmoi.username }}'
+export NIX_INSTALLER_NIX_PACKAGE_URL=https://releases.nixos.org/nix/nix-2.18.9/nix-2.18.9-x86_64-linux.tar.xz
+export NIX_INSTALLER_NO_CONFIRM=1
+
+{{ .chezmoi.homeDir }}/.local/bin/nix-installer install linux
