--- a/dot_config/nix/nix.conf.tmpl
+++ b/dot_config/nix/nix.conf.tmpl
@@ -1,4 +1,4 @@
-experimental-features = fetch-closure flakes nix-command
+experimental-features = fetch-closure flakes legacy-nar-behaviour nix-command
 flake-registry = https://ghe.anduril.dev/raw/anduril/registry/master/registry.json
 narinfo-cache-negative-ttl = 0
 netrc-file = {{ .chezmoi.homeDir }}/.config/nix/netrc
