--- a/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_10_aptfile.sh.tmpl
@@ -14,7 +14,7 @@ apt_repository "dropbox" "https://linux.dropbox.com/ubuntu" "{{ .chezmoi.osRelea
 {{ end -}}
 apt_repository "github_cli" "https://cli.github.com/packages" "stable main" "" "https://cli.github.com/packages/githubcli-archive-keyring.gpg"
 apt_repository "hashicorp" "https://apt.releases.hashicorp.com" "{{ .chezmoi.osRelease.ubuntuCodename | replace "oracular" "noble" }} main" "{{ .chezmoi.arch }}" "https://apt.releases.hashicorp.com/gpg"
-apt_repository "helm" "https://baltocdn.com/helm/stable/debian/" "all main" "" "https://baltocdn.com/helm/signing.asc"
+apt_repository "helm" "https://packages.buildkite.com/helm-linux/helm-debian/any/" "any main" "" "https://packages.buildkite.com/helm-linux/helm-debian/gpgkey"
 {{ if .work -}}
 apt_repository "jfrog" "https://releases.jfrog.io/artifactory/jfrog-debs" "focal contrib" "" "https://releases.jfrog.io/artifactory/jfrog-gpg-public/jfrog_public_gpg.key"
 {{- end }}
