--- a/dot_venv/requirements.in.tmpl
+++ b/dot_venv/requirements.in.tmpl
@@ -5,7 +5,7 @@ cc2538-bsl @ git+https://github.com/JelmerT/cc2538-bsl
 esphome
 esptool
 {{ end -}}
-gnome-extensions-cli
+git+https://github.com/essembeh/gnome-extensions-cli.git@refs/pull/42/head#egg=gnome-extensions-cli
 pip-tools >= 7
 pipx
 pre-commit
