Attempt to fix tests

--- a/.chezmoiscripts/run_onchange_after_70_gnome-extensions.sh.tmpl
+++ b/.chezmoiscripts/run_onchange_after_70_gnome-extensions.sh.tmpl
@@ -11,6 +11,8 @@ set -o pipefail
     "nightthemeswitcher@romainvigier.fr"
 -}}
 
+{{ if not (env "CI") -}}
 {{- range $extensions }}
 gnome-extensions-cli install {{ . }}
+{{- end }}
 {{- end }}
